--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -30,9 +30,9 @@ defaults:
 jobs:
   # Build job
   build:
-    runs-on: [linux, onprem, x64, small]
+    runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.121.0
+      HUGO_VERSION: 0.134.0
     steps:
       - name: Install Hugo CLI
         run: |
