--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -21,7 +21,8 @@ jobs:
         extended: true
 
     - name: Build Hugo Site
-      run: hugo --minify --theme docsy
+      run: hugo --minify
+      # run: hugo --minify --theme docsy
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
