--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -17,12 +17,11 @@ jobs:
     - name: Setup Node.js  
       uses: actions/setup-node@v3  
       with:  
-        node-version: '16'  # Set the Node.js version  
+        node-version: '20'  # Set the Node.js version  
   
-    - name: Install Node.js dependencies  
+    - name: Install PostCSS  
       run: |  
-        npm install -g postcss-cli  
-        npm install -g autoprefixer  
+        npm install postcss-cli autoprefixer  
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
