--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Set to your default branch
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
