--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -3,43 +3,44 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Set to your default branch
-
-permissions:
-  contents: write
+      - main # Set to your default branch
 
 jobs:
   deploy:
+    permissions:
+      contents: write
+
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive  # Fetch Hugo themes (if you're using any as a submodule)
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive # Fetch Hugo themes (if you're using any as a submodule)
 
-    - name: Setup Node.js  
-      uses: actions/setup-node@v3  
-      with:  
-        node-version: '20'  # Set the Node.js version  
-  
-    - name: Install PostCSS  
-      run: |  
-        npm install postcss-cli autoprefixer  
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20" # Set the Node.js version
 
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: 'latest'
-        extended: true
+      - name: Install PostCSS
+        run: |
+          npm install postcss-cli autoprefixer
 
-    - name: Build Hugo Site
-      run: hugo --minify
-      # run: hugo --minify --theme docsy
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: "latest"
+          extended: true
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public  # Or your Hugo build directory
-        keep_files: true
-        publish_branch: gh-pages  # The branch you want to push the build to
+      - name: Build Hugo Site
+        # run: hugo --minify
+        run: hugo --minify --theme docsy
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public # Or your Hugo build directory
+          keep_files: true
+          publish_branch: gh-pages # The branch you want to push the build to
