--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,46 +1,44 @@
-name: Deploy to GitHub Pages
+name: Deployment to GitHub Pages
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main # Set to your default branch
+      - main
+  pull_request:
+
+env:
+  REPO_NAME: ${{ github.event.repository.name }}
+  REPO_OWNER: ${{ github.repository_owner }}
 
 jobs:
   deploy:
-    permissions:
-      contents: write
-
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-22.04
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
-          submodules: recursive # Fetch Hugo themes (if you're using any as a submodule)
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20" # Set the Node.js version
-
-      - name: Install PostCSS
-        run: |
-          npm install postcss-cli autoprefixer
+          fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: "latest"
+          hugo-version: "0.125.5"
           extended: true
 
-      - name: Build Hugo Site
-        # run: hugo --minify
-        run: hugo --minify --theme docsy
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - run: npm ci
+      - run: hugo --baseURL https://${REPO_OWNER}.github.io/${REPO_NAME} --minify
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public # Or your Hugo build directory
-          keep_files: true
-          publish_branch: gh-pages # The branch you want to push the build to
