--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "cSpell.words": [
     "Docsy",
     "Goldydocs"
-  ]
+  ],
+  "yaml.schemas": {
+    "https://json.schemastore.org/github-workflow.json": "file:///Users/danlenz/personal/website/.github/workflows/hugo.yaml"
+  }
 }
