--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.docsy.dev/"
+baseURL = "https://daniellenz.github.io/website"
 title = "Goldydocs"
 
 # Language settings
